setting up request form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -87,8 +87,7 @@
                 Data
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="/requests">Lane Speeds</a>
-                <a class="dropdown-item" href="/requests">Lane Counts</a>
+                <a class="dropdown-item" href="/requests">Generate Request</a>
               </div>
             </li>
             <li class="nav-item">
