--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -91,7 +91,7 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Request History</a>
+              <a class="nav-link" href="/request_history">Request History</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="edit_traffic_manager">Account</a>
