--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,3 +1,48 @@
+<div id="map">
+            <script>
+              function initMap() {
+
+                var map = new google.maps.Map(document.getElementById('map'), {
+                  zoom: 7.5,
+                  center: {lat: <%= (request.bounding_box_latitude_1+request.bounding_box_latitude_2)/2.0 %>, lng: <%= (request.bounding_box_longitude_1+request.bounding_box_longitude_2)/2.0 %>}
+                });
+
+                // Create an array of alphabetical characters used to label the markers.
+                var labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+
+                // Add some markers to the map.
+                // Note: The code uses the JavaScript Array.prototype.map() method to
+                // create an array of markers based on a given "locations" array.
+                // The map() method here has nothing to do with the Google Maps API.
+                var markers = locations.map(function(location, i) {
+                  return new google.maps.Marker({
+                    position: location,
+                    label: labels[i % labels.length]
+                  });
+                });
+
+                // Add a marker clusterer to manage the markers.
+                var markerCluster = new MarkerClusterer(map, markers,
+                    {imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m'});
+              }
+
+              var latitudes = <%= @sensors.where({:id => request.sensor_list}).pluck(:latitude) %>
+              var longitudes = <%= @sensors.where({:id => request.sensor_list}).pluck(:longitude) %>
+              
+              var locations = [];
+              for(var i in latitudes){
+                locations.push( {"lat": latitudes[i], "lng": longitudes[i]});
+              }
+
+            </script>
+
+            <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
+            </script>
+            <script async defer
+              src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5qwIlcKjijP_Ptmv46mk4cCjuWhSzS78&libraries=places&callback=initMap">
+            </script>
+          </div>
+
 <div class="row mb-3">
   <div class="col-md-8 offset-md-2">
     <h1>
