--- a/app/views/requests/show_request_history.html.erb
+++ b/app/views/requests/show_request_history.html.erb
@@ -1,137 +1,123 @@
 <div class="row mb-3">
   <div class="mx-auto">
-    <h2>  List of past Requests</h2>
+    <h2>  List of your past Requests</h2>
   </div>
 </div>
+
+<div class="container">
 <ul style="list-style-type:none;"> 
   <li>
     <a href="/requests">Another request</a>
   </li>
 </ul>
+</div>
 
-<hr>
-<div class="row mb-3">
-  <div class="col-md-12">
-    <table class="table">
-      <tr>
-        <th>
-          ID
-        </th>
+<div class="container">
+<table class="table table-striped table-sm">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Time range</th>
+      <th scope="col">Speed range</th>
+      <th scope="col">Sensor list</th>
+      <th scope="col">Bounding box</th>
+      <th scope="col">Created</th>
+      <th scope="col"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @requests.each do |request| %>
+    <tr>
+      <th scope="row"><%= request.id %></th>
+      <td><%= request.begin_time.strftime("%I:%M %p") %> to <%= request.end_time.strftime("%I:%M %p") %></td>
+      <td><%= request.speed_range_lower_limt %> - <%= request.speed_range_upper_limit %> km/hr</td>
+      <td width=280px>
+          <% if request.sensor_list != nil %>
+            <%= @sensors.where({:id => request.sensor_list}).pluck(:sensor_name) %>
+          <% else %>
+            No sensor selected
+          <% end %>
+      </td>
+      <td>
+        <!--
+        <div class="col" style="clear:both; height:300px;">
+          <div id="map">
+            <script>
+              function initMap() {
 
-        <th>
-          Begin time
-        </th>
+                var map = new google.maps.Map(document.getElementById('map'), {
+                  zoom: 7.5,
+                  center: {lat: <%= (request.bounding_box_latitude_1+request.bounding_box_latitude_2)/2.0 %>, lng: <%= (request.bounding_box_longitude_1+request.bounding_box_longitude_2)/2.0 %>}
+                });
 
-        <th>
-          End time
-        </th>
+                // Create an array of alphabetical characters used to label the markers.
+                var labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
 
-        <th>
-          Requestor
-        </th>
+                // Add some markers to the map.
+                // Note: The code uses the JavaScript Array.prototype.map() method to
+                // create an array of markers based on a given "locations" array.
+                // The map() method here has nothing to do with the Google Maps API.
+                var markers = locations.map(function(location, i) {
+                  return new google.maps.Marker({
+                    position: location,
+                    label: labels[i % labels.length]
+                  });
+                });
 
-        <th>
-          Speed range lower limt
-        </th>
+                // Add a marker clusterer to manage the markers.
+                var markerCluster = new MarkerClusterer(map, markers,
+                    {imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m'});
+              }
 
-        <th>
-          Speed range upper limit
-        </th>
+              var latitudes = <%= @sensors.where({:id => request.sensor_list}).pluck(:latitude) %>
+              var longitudes = <%= @sensors.where({:id => request.sensor_list}).pluck(:longitude) %>
+              
+              var locations = [];
+              for(var i in latitudes){
+                locations.push( {"lat": latitudes[i], "lng": longitudes[i]});
+              }
 
-        <th>
-          Sensor List
-        </th>
+            </script>
 
-        <th>
-          Bounding box latitude 1
-        </th>
-
-        <th>
-          Bounding box latitude 2
-        </th>
-
-        <th>
-          Bounding box longitude 1
-        </th>
-
-        <th>
-          Bounding box longitude 2
-        </th>
-
-        <th>
-          Created at
-        </th>
-
-        <th>
-          Updated at
-        </th>
-
-        <th>
-        </th>
-      </tr>
-
-      <% @requests.each do |request| %>
-      <tr>
-        <td>
-          <%= request.id %>
-        </td>
-
-        <td>
-          <%= request.begin_time %>
-        </td>
-
-        <td>
-          <%= request.end_time %>
-        </td>
-
-        <td>
-          <%= request.requestor.first_name+" "+request.requestor.last_name %>
-        </td>
-
-        <td>
-          <%= request.speed_range_lower_limt %>
-        </td>
-
-        <td>
-          <%= request.speed_range_upper_limit %>
-        </td>
-
-        <td>
-          <%= request.sensor_list %>
-        </td>
-
-        <td>
-          <%= request.bounding_box_latitude_1 %>
-        </td>
-
-        <td>
-          <%= request.bounding_box_latitude_2 %>
-        </td>
-
-        <td>
-          <%= request.bounding_box_longitude_1 %>
-        </td>
-
-        <td>
-          <%= request.bounding_box_longitude_2 %>
-        </td>
-
-        <td>
-          <%= time_ago_in_words(request.created_at) %> ago
-        </td>
-        <td>
-          <%= time_ago_in_words(request.updated_at) %> ago
-        </td>
-
-        <td>
-          <a href="/requests/<%= request.id %>">
-            Show details
-          </a>
-        </td>
-      </tr>
-      <% end %>
-    </table>
-  </div>
+            <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
+            </script>
+            <script async defer
+              src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5qwIlcKjijP_Ptmv46mk4cCjuWhSzS78&libraries=places&callback=initMap">
+            </script>
+          </div> 
+        </div>
+        -->
+        North: <%= request.bounding_box_latitude_1.round(4) %><br>
+        South: <%= request.bounding_box_latitude_2.round(4) %><br>
+        West: <%= request.bounding_box_longitude_1.round(4) %><br>
+        East: <%= request.bounding_box_longitude_2.round(4) %>
+      </td>
+      <td>
+        <%= time_ago_in_words(request.updated_at) %>
+      </td>
+      <td width=200px>
+        <ul style="list-style-type:none;">
+          <li>
+            <a href="/requests/<%= request.id %>">
+              Show details
+            </a>
+          </li>
+          <li>
+            <a href="/requests/<%= request.id %>">
+              View data (JSON)
+            </a>
+          </li>
+          <li>
+            <a href="/requests/<%= request.id %>">
+              View data (HTML)
+            </a>
+          </li>
+        </ul>
+      </td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
 </div>
 
 <hr>
