--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,47 +1,44 @@
-<div id="map">
-            <script>
-              function initMap() {
+<head>
+  <script>
+    function initMap() {
 
-                var map = new google.maps.Map(document.getElementById('map'), {
-                  zoom: 7.5,
-                  center: {lat: <%= (request.bounding_box_latitude_1+request.bounding_box_latitude_2)/2.0 %>, lng: <%= (request.bounding_box_longitude_1+request.bounding_box_longitude_2)/2.0 %>}
-                });
+      var map = new google.maps.Map(document.getElementById('map'), {
+        zoom: 10,
+        center: {lat: <%= (@request.bounding_box_latitude_1+@request.bounding_box_latitude_2)/2.0 %>, lng: <%= (@request.bounding_box_longitude_1+@request.bounding_box_longitude_2)/2.0 %>}
+      });
 
-                // Create an array of alphabetical characters used to label the markers.
-                var labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+      // Create an array of alphabetical characters used to label the markers.
+      var labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
 
-                // Add some markers to the map.
-                // Note: The code uses the JavaScript Array.prototype.map() method to
-                // create an array of markers based on a given "locations" array.
-                // The map() method here has nothing to do with the Google Maps API.
-                var markers = locations.map(function(location, i) {
-                  return new google.maps.Marker({
-                    position: location,
-                    label: labels[i % labels.length]
-                  });
-                });
+      // Add some markers to the map.
+      // Note: The code uses the JavaScript Array.prototype.map() method to
+      // create an array of markers based on a given "locations" array.
+      // The map() method here has nothing to do with the Google Maps API.
+      var markers = locations.map(function(location, i) {
+        return new google.maps.Marker({
+          position: location,
+          label: labels[i % labels.length]
+        });
+      });
 
-                // Add a marker clusterer to manage the markers.
-                var markerCluster = new MarkerClusterer(map, markers,
-                    {imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m'});
-              }
+      // Add a marker clusterer to manage the markers.
+      var markerCluster = new MarkerClusterer(map, markers,
+          {imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m'});
+    }
 
-              var latitudes = <%= @sensors.where({:id => request.sensor_list}).pluck(:latitude) %>
-              var longitudes = <%= @sensors.where({:id => request.sensor_list}).pluck(:longitude) %>
-              
-              var locations = [];
-              for(var i in latitudes){
-                locations.push( {"lat": latitudes[i], "lng": longitudes[i]});
-              }
+    var latitudes = <%= @sensors.where({:id => @request.sensor_list}).pluck(:latitude) %>
+    var longitudes = <%= @sensors.where({:id => @request.sensor_list}).pluck(:longitude) %>
+    
+    var locations = [];
+    for(var i in latitudes){
+      locations.push( {"lat": latitudes[i], "lng": longitudes[i]});
+    }
 
-            </script>
+  </script>
 
-            <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
-            </script>
-            <script async defer
-              src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5qwIlcKjijP_Ptmv46mk4cCjuWhSzS78&libraries=places&callback=initMap">
-            </script>
-          </div>
+  <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
+  </script>
+</head>
 
 <div class="row mb-3">
   <div class="col-md-8 offset-md-2">
@@ -51,7 +48,7 @@
 
     <div class="row mb-3">
       <div class="col">
-        <a href="/requests" class="btn btn-block btn-outline-secondary">
+        <a href="/request_history" class="btn btn-block btn-outline-secondary">
           Go back
         </a>
       </div>
@@ -63,188 +60,69 @@
       </div>
     </div>
 
-    <dl>
-      <dt>
-        Begin time
-      </dt>
-      <dd>
-        <%= @request.begin_time %>
-      </dd>
+    <div class="row mb-3">
+      <div class="col">
+        <dl>
+          <dt>
+            Time range 
+          </dt>
+          <dd>
+            <%= @request.begin_time.strftime("%I:%M %p") %> to <%= @request.end_time.strftime("%I:%M %p") %>
+          </dd>
 
-      <dt>
-        End time
-      </dt>
-      <dd>
-        <%= @request.end_time %>
-      </dd>
+          <dt>
+            Speed range 
+          </dt>
+          <dd>
+            <%= @request.speed_range_lower_limt %> - <%= @request.speed_range_upper_limit %> Km/hr
+          </dd>
 
-      <dt>
-        Requestor
-      </dt>
-      <dd>
-        <%= @request.requestor.first_name+" "+@request.requestor.last_name %>
-      </dd>
+          <dt>
+            Sensor List
+          </dt>
+          <dd>
+            <% if @request.sensor_list != nil %>
+              <%= @sensors.where({:id => @request.sensor_list}).pluck(:sensor_name) %>
+            <% else %>
+              No sensor selected
+            <% end %>
+          </dd>
 
-      <dt>
-        Speed range lower limt
-      </dt>
-      <dd>
-        <%= @request.speed_range_lower_limt %>
-      </dd>
+          <dt>
+            Created at
+          </dt>
+          <dd>
+            <%= time_ago_in_words(@request.created_at) %> ago
+          </dd>
 
-      <dt>
-        Speed range upper limit
-      </dt>
-      <dd>
-        <%= @request.speed_range_upper_limit %>
-      </dd>
+          <dt>
+            Updated at
+          </dt>
+          <dd>
+            <%= time_ago_in_words(@request.updated_at) %> ago
+          </dd>
+        </dl>
+      </div>
 
-      <dt>
-        Sensor List
-      </dt>
-      <dd>
-        <%= @request.sensor_list %>
-      </dd>
-
-      <dt>
-        Bounding box latitude 1
-      </dt>
-      <dd>
-        <%= @request.bounding_box_latitude_1 %>
-      </dd>
-
-      <dt>
-        Bounding box latitude 2
-      </dt>
-      <dd>
-        <%= @request.bounding_box_latitude_2 %>
-      </dd>
-
-      <dt>
-        Bounding box longitude 1
-      </dt>
-      <dd>
-        <%= @request.bounding_box_longitude_1 %>
-      </dd>
-
-      <dt>
-        Bounding box longitude 2
-      </dt>
-      <dd>
-        <%= @request.bounding_box_longitude_2 %>
-      </dd>
-
-      <dt>
-        Created at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@request.created_at) %> ago
-      </dd>
-
-      <dt>
-        Updated at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@request.updated_at) %> ago
-      </dd>
-    </dl>
+      <div class="col">
+        <div id="map">
+          <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5qwIlcKjijP_Ptmv46mk4cCjuWhSzS78&libraries=places&callback=initMap">
+          </script>
+        </div> 
+      </div>
+    </div>
   </div>
 </div>
 
 <hr>
-
 
 <div class="row mb-3">
   <div class="col-md-8 offset-md-2">
     <h2>
       Edit request
     </h2>
-
-    <form action="/modify_request/<%= @request.id %>"  method="post" >
-      <div class="form-group">
-        <label for="begin_time_box">
-          Begin time
-        </label>
-
-        <input type="time" id="begin_time_box" name="begin_time_from_query" class="form-control" value="<%= @request.begin_time %>">
-      </div>
-
-      <div class="form-group">
-        <label for="end_time_box">
-          End time
-        </label>
-
-        <input type="time" id="end_time_box" name="end_time_from_query" class="form-control" value="<%= @request.end_time %>">
-      </div>
-
-      <div class="form-group">
-        <label for="requestor_id_box">
-          Requestor
-        </label>
-
-        <input type="text" id="requestor_id_box" name="requestor_id_from_query" class="form-control" value="<%= @request.requestor_id %>">
-      </div>
-
-      <div class="form-group">
-        <label for="speed_range_lower_limt_box">
-          Speed range lower limt
-        </label>
-
-        <input type="text" id="speed_range_lower_limt_box" name="speed_range_lower_limt_from_query" class="form-control" value="<%= @request.speed_range_lower_limt %>">
-      </div>
-
-      <div class="form-group">
-        <label for="speed_range_upper_limit_box">
-          Speed range upper limit
-        </label>
-
-        <input type="text" id="speed_range_upper_limit_box" name="speed_range_upper_limit_from_query" class="form-control" value="<%= @request.speed_range_upper_limit %>">
-      </div>
-
-      <div class="form-group">
-        <label for="sensor_id_box">
-          Sensor List
-        </label>
-
-        <input type="text" id="sensor_id_box" name="sensor_id_from_query" class="form-control" value="<%= @request.sensor_list %>">
-      </div>
-
-      <div class="form-group">
-        <label for="bounding_box_latitude_1_box">
-          Bounding box latitude 1
-        </label>
-
-        <input type="text" id="bounding_box_latitude_1_box" name="bounding_box_latitude_1_from_query" class="form-control" value="<%= @request.bounding_box_latitude_1 %>">
-      </div>
-
-      <div class="form-group">
-        <label for="bounding_box_latitude_2_box">
-          Bounding box latitude 2
-        </label>
-
-        <input type="text" id="bounding_box_latitude_2_box" name="bounding_box_latitude_2_from_query" class="form-control" value="<%= @request.bounding_box_latitude_2 %>">
-      </div>
-
-      <div class="form-group">
-        <label for="bounding_box_longitude_1_box">
-          Bounding box longitude 1
-        </label>
-
-        <input type="text" id="bounding_box_longitude_1_box" name="bounding_box_longitude_1_from_query" class="form-control" value="<%= @request.bounding_box_longitude_1 %>">
-      </div>
-
-      <div class="form-group">
-        <label for="bounding_box_longitude_2_box">
-          Bounding box longitude 2
-        </label>
-
-        <input type="text" id="bounding_box_longitude_2_box" name="bounding_box_longitude_2_from_query" class="form-control" value="<%= @request.bounding_box_longitude_2 %>">
-      </div>
-
-      <button class="btn btn-block btn-outline-secondary">
-        Update request
-      </button>
-    </form>
+    <a href="/requests">Submit a new request</a>
   </div>
 </div>
 
