Before lanespeed migration

--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -101,14 +101,14 @@
   <div class="col-md-4  offset-md-2">
     <form action="/insert_request" method="post">
       <div class="form-group">
-        <label for="which_data_id">
+        <label for="data_tag_id">
           Select type of data
         </label>
 
-        <select class="form-control" id="which_data_id" name="which_data_from_query">
-          <option selected="selected" value="1">Speed</option>
-          <option value="2">Count</option>
-          <option value="3">Speed and Count</option>
+        <select class="form-control" id="data_tag_id" name="data_tag_from_query">
+          <option selected="selected" value="Speed">Speed</option>
+          <option value="Count">Count</option>
+          <option value="SpeedCount">Speed and Count</option>
           
         </select>
       </div>
