--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -64,6 +64,12 @@
       <div class="col">
         <dl>
           <dt>
+            Data Requested
+          </dt>
+          <dd>
+            <%= @request.data_tag %>
+          </dd>
+          <dt>
             Time range 
           </dt>
           <dd>
@@ -112,6 +118,33 @@
         </div> 
       </div>
     </div>
+  </div>
+</div>
+
+<hr>
+
+<div class="row mb-3">
+  <div class="col-md-8 offset-md-2">
+    <h2>
+      Show Data
+    </h2>
+    <dl>
+      <dd>
+        <a href="/requests/<%= @request.id %>">
+          View data (JSON)
+        </a>
+      </dd>
+      <dd>
+        <a href="/requests/<%= @request.id %>">
+          View data (HTML)
+        </a>
+      </dd>
+      <dd>
+        <a href="/requests/<%= @request.id %>/map">
+          View data (Map)
+        </a>
+      </dd>
+    </dt>
   </div>
 </div>
 
