json data display works

--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -130,7 +130,7 @@
     </h2>
     <dl>
       <dd>
-        <a href="/requests/<%= @request.id %>">
+        <a href="/requests/<%= @request.id %>/json">
           View data (JSON)
         </a>
       </dd>
