--- a/app/views/requests/show_request_history.html.erb
+++ b/app/views/requests/show_request_history.html.erb
@@ -103,7 +103,7 @@
             </a>
           </li>
           <li>
-            <a href="/requests/<%= request.id %>">
+            <a href="/requests/<%= request.id %>/json">
               View data (JSON)
             </a>
           </li>
