map data complete

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -92,13 +92,8 @@
                 <a class="dropdown-item disabled" href="#">Add a Sensor</a>
               </div>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link disabled dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Data
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item disabled" href="#">Generate Request</a>
-              </div>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Search Data</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Request History</a>
@@ -117,13 +112,8 @@
                 <a class="dropdown-item" href="/add_new_sensor_page">Add a Sensor</a>
               </div>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Data
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="/requests">Generate Request</a>
-              </div>
+            <li class="nav-item">
+              <a class="nav-link" href="/requests">Search Data</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/request_history">Request History</a>
