--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -42,9 +42,9 @@
 
 <div class="row mb-3">
   <div class="col-md-8 offset-md-2">
-    <h1>
+    <h2>
       Request #<%= @request.id %> details
-    </h1>
+    </h2>
 
     <div class="row mb-3">
       <div class="col">
@@ -135,7 +135,7 @@
         </a>
       </dd>
       <dd>
-        <a href="/requests/<%= @request.id %>">
+        <a href="/requests/<%= @request.id %>/table">
           View data (HTML)
         </a>
       </dd>
