Added delete to request history page and fixed rake task to remove sensor location_id

--- a/app/views/requests/show_request_history.html.erb
+++ b/app/views/requests/show_request_history.html.erb
@@ -119,6 +119,18 @@
               View data (Map)
             </a>
           </li>
+              
+          <li>
+              <br>
+          </li>
+          <li>
+              <br>
+          </li>
+          <li>
+            <a href="/delete_request/<%= request.id %>">
+              Delete Request
+            </a>
+          </li>
         </ul>
       </td>
     </tr>
