Fixed add sensor type from different pages issue

--- a/app/views/sensors/show.html.erb
+++ b/app/views/sensors/show.html.erb
@@ -119,7 +119,7 @@
             </button>
           </div>
           <div class="modal-body">
-            <form action="/insert_sensor_type" method="post">
+            <form action="/insert_sensor_type_modal" method="post">
               <div class="form-group">
                 <label for="sensor_type_box">
                   Sensor type
