--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -136,7 +136,7 @@
       </dd>
       <dd>
         <a href="/requests/<%= @request.id %>/table">
-          View data (HTML)
+          View data (Table)
         </a>
       </dd>
       <dd>
