--- a/app/views/requests/show_request_history.html.erb
+++ b/app/views/requests/show_request_history.html.erb
@@ -111,7 +111,7 @@
           </li>
           <li>
             <a href="/requests/<%= request.id %>/table">
-              View data (HTML)
+              View data (Table)
             </a>
           </li>
           <li>
