fixed front page links

--- a/app/views/traffic_managers/index.html.erb
+++ b/app/views/traffic_managers/index.html.erb
@@ -23,7 +23,7 @@
         <h5 class="card-title">800,000+ data points</h5>
         <p class="card-text">Three different types of sensor collect speed, volume, and occupancy 
         data every two minutes all day</p>
-        <a href="/data" class="btn btn-primary">Look at Data</a>
+        <a href="/requests" class="btn btn-primary">Look at Data</a>
       </div>
     </div>
   </div>
@@ -32,7 +32,7 @@
       <div class="card-body">
         <h5 class="card-title">History</h5>
         <p class="card-text">Easily go back, look at historical data request to view and download the data</p>
-        <a href="/sensors" class="btn btn-primary">Request History</a>
+        <a href="/request_history" class="btn btn-primary">Request History</a>
       </div>
     </div>
   </div>
