--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -92,7 +92,7 @@
 
 <div class="col-md-8 offset-md-2 mx-auto">
 <h2>
-  Add a new request for <strong>Traffic Data</strong>
+  Search <strong>Traffic Data</strong>
 </h2>
 </div>
 
