Changed navigation names

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -87,8 +87,8 @@
                 Sensors
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item disabled" href="#">View Sensor Map</a>
-                <a class="dropdown-item disabled" href="#">View Sensor List</a>
+                <a class="dropdown-item disabled" href="#">Sensor Map</a>
+                <a class="dropdown-item disabled" href="#">Sensor List</a>
                 <a class="dropdown-item disabled" href="#">Add a Sensor</a>
               </div>
             </li>
@@ -107,8 +107,8 @@
                 Sensors
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="/sensors">View Sensor Map</a>
-                <a class="dropdown-item" href="/show_sensor_list">View Sensor List</a>
+                <a class="dropdown-item" href="/sensors">Sensor Map</a>
+                <a class="dropdown-item" href="/show_sensor_list">Sensor List</a>
                 <a class="dropdown-item" href="/add_new_sensor_page">Add a Sensor</a>
               </div>
             </li>
