--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -118,7 +118,7 @@
           Start time
         </label>
 
-        <input type="time" id="begin_time_box" name="begin_time_from_query" class="form-control" min="00:00" max="24:00" value="00:00">
+        <input type="time" id="begin_time_box" name="begin_time_from_query" class="form-control" min="00:00" max="24:00" value="00:00">      
       </div>
 
       <div class="form-group">
@@ -151,6 +151,7 @@
             <input type="text" id="speed_range_upper_limit_box" name="speed_range_upper_limit_from_query" class="form-control" value="130">
           </div>
         </div>
+        <small  class="form-text text-muted">Filter by time and speed functionality not yet implemented</small>
       </div>
 
       <div class="form-group">
