--- a/app/views/sensor_types/index.html.erb
+++ b/app/views/sensor_types/index.html.erb
@@ -21,7 +21,7 @@
           Sensor type
         </label>
 
-        <input type="text" id="sensor_type_box" name="sensor_type_from_query" class="form-control">
+        <input type="text" id="sensor_type_box" name="sensor_type_from_query" class="form-control" required>
       </div>
 
       <button class="btn btn-block btn-outline-secondary">
